--- a/static/custom.css
+++ b/static/custom.css
@@ -25,3 +25,7 @@ main.post, .post.on-list {
 body.background-image {
     background-position-y: 40px ;
 }
+
+h1, h2, h3 {
+    color: rgb(var(--color-primary)) !important;
+}
