--- a/static/custom.css
+++ b/static/custom.css
@@ -13,19 +13,23 @@ body {
     background-color: rgb(var(--color-background)) !important;
 }
 
-.header, .menu, .submenu {
+.header,
+.menu,
+.submenu {
     background-color: rgb(var(--color-accent-e)) !important;
 }
 
-main.post, .post.on-list {
-    background-color: rgba(var(--color-background), 0.7) !important;
-
+main.post,
+.post.on-list {
+    background-color: rgba(var(--color-background), 0.8) !important;
 }
 
 body.background-image {
-    background-position-y: 40px ;
+    background-position-y: 40px;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     color: rgb(var(--color-primary)) !important;
 }
