--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,11 +24,13 @@
                 <div class="posts">
                     <div class="post on-list">
                         <h1 class="post-title">Welcome</h1>
-                        <p>Welcome to the 38c3 Relationship Geeks workshop page. Here you'll find shared information about our workshops and related topics.</p>
+                        <div class="post-content">
+                            <p>Welcome to the 38c3 Relationship Geeks workshop page. Here you'll find shared information about our workshops and related topics.</p>
 
-                        <p>Feel free to stop by <a href="https://events.ccc.de/congress/2024/hub/de/assembly/rg/">our assembly</a> or checkout our general <a href="/recommendations">reading recommendations</a>.</p>
+                            <p>Feel free to stop by <a href="https://events.ccc.de/congress/2024/hub/de/assembly/rg/">our assembly</a> or checkout our general <a href="/recommendations">reading recommendations</a>.</p>
 
-                        <p>We hope you're heaving a great time at congress <3</p>
+                            <p>We hope you're heaving a great time at congress <3</p>
+                        </div>
                     </div>
                 </div>
             </div>
