index.html: Add link to assembly events schedule

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,6 +27,8 @@
                         <div class="post-content">
                             <p>Welcome to the 38c3 Relationship Geeks workshop page. Here you'll find shared information about our workshops and related topics.</p>
 
+                            <p><a href="https://events.ccc.de/congress/2024/hub/en/assembly/rg/">Here</a> you can find the schedule for our events</p>
+
                             <p>Feel free to stop by <a href="https://events.ccc.de/congress/2024/hub/de/assembly/rg/">our assembly</a> or checkout our general <a href="/recommendations">reading recommendations</a>.</p>
 
                             <p>We hope you're heaving a great time at congress <3</p>
