--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,6 +12,32 @@
             <h1>{{ .Site.Params.homeTitle }}</h1>
             {{ partial "subtitle.html" . }}
         <!-- Start Posts -->
+        <div class="content">
+            <div class="posts">
+	        <div class="post on-list">
+		    <!-- Welcome text during congress -->
+		    <!--<h1 class="post-title">Welcome</h1>
+		    <div class="post-content">
+		        <p>Welcome to the 38c3 Relationship Geeks workshops page. Here you'll find shared information about our workshops and related topics.</p>
+
+		        <p><a href="https://events.ccc.de/congress/2024/hub/en/assembly/rg/">Here</a> you can find the schedule for our events</p>
+
+		        <p>Feel free to stop by <a href="https://events.ccc.de/congress/2024/hub/de/assembly/rg/">our assembly</a> or checkout our general <a href="/recommendations">reading recommendations</a>.</p>
+
+		        <p>We hope you're heaving a great time at congress <3</p>
+		    </div>-->
+		    <!-- Welcome text inbetween congresses -->
+		    <h1 class="post-title">Welcome and Farewell</h1>
+		    <div class="post-content">
+		        <p>Welcome to the 38c3 Relationship Geeks workshops page.</p>
+
+		        <p>We hope you had a great at congress - we certainly did. Feel free to checkout our <a href="/archive">shared resources and workshop notes from past congresses</a>.</p>
+
+		        <p>See you next time! <3</p>
+		    </div>
+	        </div>
+            </div>
+        </div>
         {{ if .Site.Params.showPosts }}
             {{ $isntDefault := not (or (eq (trim $.Site.Params.contentTypeName " ") "posts") (eq (trim $.Site.Params.contentTypeName " ") "")) }}
             {{ $contentTypeName := cond $isntDefault (string $.Site.Params.contentTypeName) "posts" }}
@@ -20,22 +46,6 @@
                 {{ $PageContext = .Site }}
             {{ end }}
             {{ $paginator := .Paginate (where $PageContext.RegularPages "Type" $contentTypeName) 100 }}
-            <div class="content">
-                <div class="posts">
-                    <div class="post on-list">
-                        <h1 class="post-title">Welcome</h1>
-                        <div class="post-content">
-                            <p>Welcome to the 38c3 Relationship Geeks workshop page. Here you'll find shared information about our workshops and related topics.</p>
-
-                            <p><a href="https://events.ccc.de/congress/2024/hub/en/assembly/rg/">Here</a> you can find the schedule for our events</p>
-
-                            <p>Feel free to stop by <a href="https://events.ccc.de/congress/2024/hub/de/assembly/rg/">our assembly</a> or checkout our general <a href="/recommendations">reading recommendations</a>.</p>
-
-                            <p>We hope you're heaving a great time at congress <3</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
             {{ if .Content }}
             <div class="content">{{ .Content }}</div>
             {{ end }}
