index.html: Fix archive link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,7 +31,7 @@
 		    <div class="post-content">
 		        <p>Welcome to the 38c3 Relationship Geeks workshops page.</p>
 
-		        <p>We hope you had a great at congress - we certainly did. Feel free to checkout our <a href="/archive">shared resources and workshop notes from past congresses</a>.</p>
+		        <p>We hope you had a great at congress - we certainly did. Feel free to checkout our <a href="./archive">shared resources and workshop notes from past congresses</a>.</p>
 
 		        <p>See you next time! <3</p>
 		    </div>
