--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,6 +16,7 @@
             <div class="posts">
 	        <div class="post on-list">
 		    <!-- Welcome text during congress -->
+		    <!--
 		    <h1 class="post-title">Welcome</h1>
 		    <div class="post-content">
 		        <p>Welcome to the 39c3 Relationship Geeks workshops page. Here you'll find shared information about our workshops and related topics.</p>
@@ -26,15 +27,16 @@
 
 		        <p>We hope you're heaving a great time at congress <3</p>
 		    </div>
+		    -->
 		    <!-- Welcome text inbetween congresses -->
-		    <!--<h1 class="post-title">Welcome and Farewell</h1>
+		    <h1 class="post-title">Welcome and Farewell</h1>
 		    <div class="post-content">
 		        <p>Welcome to the 39c3 Relationship Geeks workshops page.</p>
 
 		        <p>We hope you had a great at congress - we certainly did. Feel free to checkout our <a href="./archive">shared resources and workshop notes from past congresses</a>.</p>
 
 		        <p>See you next time! <3</p>
-		    </div>-->
+		    </div>
 	        </div>
             </div>
         </div>
